--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <div class="max-w-3xl mx-auto text-center text-gray-600 space-y-4">
       <p><i class="fa-solid fa-envelope-circle-check text-purple-600 mr-2"></i> rawanmohamedfathy4@gmail.com</p>
       <p><i class="fa-solid fa-phone text-purple-600 mr-2"></i> +201515315653</p>
-      <p><i class="fa-brands fa-linkedin text-purple-600 mr-2"></i> <a href="https://www.linkedin.com/in/rawan-mohamed-556355274/" target="_blank" class="hover:underline">LinkedIn Profile</a></p>
+      <p><i class="fa-brands fa-linkedin text-purple-600 mr-2"></i> <a href="www.linkedin.com/in/rawan-mohamed-fathy-556355274" target="_blank" class="hover:underline">LinkedIn Profile</a></p>
     </div>
   </section>
 
@@ -141,3 +141,4 @@
 
 </body>
 </html>
+
